--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@tanstack/react-query": "^5.39.0",
+    "@tanstack/react-query-devtools": "^5.39.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "npm": "^10.8.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "sonner": "^1.4.41",
     "yup": "^1.4.0"
   },
   "devDependencies": {
