--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@tanstack/react-query": "^5.39.0",
     "@tanstack/react-query-devtools": "^5.39.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
