--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "filepond": "^4.31.1",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-preview": "^4.6.12",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "npm": "^10.8.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.51.5",
     "sonner": "^1.4.41",
     "yup": "^1.4.0"
