--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.3",
     "npm": "^10.8.0",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.51.5",
