--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
@@ -19,6 +21,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "emoji-mart": "^5.6.0",
     "filepond": "^4.31.1",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
