--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^5.39.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
+    "bufferutil": "^4.0.8",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
     "filepond": "^4.31.1",
@@ -35,7 +36,10 @@
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.51.5",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
+    "utf-8-validate": "^5.0.10",
+    "ws": "^8.17.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
